# calendar_mail_analysis

./: README.md  app.py  config.py  logger.py  pyproject.toml
assets/excel/: MAILBOX ANALYTICS REPORT - Katie Waugh final.xlsx
dashboard/: __init__.py  charts.py  layout.py  utils.py
data/: __init__.py  loader.py  processor.py
reports/: __init__.py  base.py  client_mapping.py  content_quality.py  engagement.py  responsiveness.py  trends.py
